--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <input id="buffer_charges" type="number" step="1" inputmode="numeric" placeholder="z.B. 1038" />
       </div>
       <div>
-        <label>Hacks kg seit Asche (Zähler)</label>
+        <label>Hackschnitzel seit Asche (kg, Zähler)</label>
         <input id="chips_kg_since_ash" type="number" step="0.1" inputmode="decimal" placeholder="z.B. 343.0" />
       </div>
       <div>
