--- a/index.html
+++ b/index.html
@@ -105,7 +105,15 @@
     .warn{border:1px solid rgba(255,176,32,.35); background:rgba(255,176,32,.12); border-radius:14px; padding:10px}
     ul{margin:8px 0 0 18px; padding:0}
     li{margin:6px 0}
-  </style>
+  
+    .grid2{ display:grid; grid-template-columns:repeat(2, minmax(0,1fr)); gap:10px; }
+    @media (max-width: 980px){ .grid2{ grid-template-columns:1fr; } }
+    .card.inner{ background:rgba(255,255,255,.04); border:1px solid rgba(255,255,255,.08); }
+    .h3{ margin:0 0 8px 0; font-size:14px; color:var(--text); opacity:.95; }
+    .kv{ display:flex; justify-content:space-between; align-items:baseline; padding:6px 0; border-top:1px solid rgba(255,255,255,.06); }
+    .kv:first-of-type{ border-top:none; }
+    .kv span{ color:var(--muted); }
+</style>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -255,7 +263,7 @@
 
   <!-- AUSWERTUNG MONAT -->
   <section class="tab card hidden" data-tab="auswertung">
-    <h2 style="margin:0 0 8px 0; font-size:16px;">Monatsauswertung</h2>
+    <h2 style="margin:0 0 8px 0; font-size:16px;">Auswertung (Monat)</h2>
     <div class="row">
       <div>
         <label>Monat</label>
@@ -349,30 +357,52 @@
       <div id="statusYear" class="muted" style="margin-top:8px;"></div>
     </div>
   </section>
-  <!-- GESAMTÜBERSICHT -->
-  <section class="tab card hidden" data-tab="gesamt">
-    <h2 style="margin:0 0 8px 0; font-size:16px;">Gesamtübersicht</h2>
-    <div class="muted" style="margin-bottom:10px;">
-      Summen über alle gespeicherten Tage (unabhängig von Monat/Jahr und unabhängig von Asche-Reset).
-    </div>
-
-    <div class="row" style="align-items:flex-end;">
-      <div style="flex:1;">
-        <label>Stand</label>
-        <input id="totalsAsOf" type="text" readonly value="–" />
-      </div>
-      <div style="width:220px;">
-        <button class="secondary" id="btnTotalsRefresh">Neu berechnen</button>
-      </div>
-    </div>
-
-    <div class="kpi" id="totalsKpis"></div>
-    <div class="muted" id="totalsMsg" style="margin-top:10px;"></div>
-  </section>
-
 
   <!-- VERGLEICH -->
-  <section class="tab card hidden" data-tab="vergleich">
+  
+  <!-- GESAMT -->
+  <section class="tab card hidden" data-tab="gesamt">
+    <h2 style="margin:0 0 8px 0; font-size:16px;">Gesamtübersicht</h2>
+    <div class="row">
+      <div>
+        <button id="btnTotalsRefresh">Aktualisieren</button>
+      </div>
+      <div>
+        <div class="small" id="totalsInfo" style="text-align:right;"></div>
+      </div>
+    </div>
+
+    <div class="grid2">
+      <div class="card inner">
+        <h3 class="h3">Wärme (kWh)</h3>
+        <div class="kv"><span>Gesamt</span><b id="totHeatTotal">–</b></div>
+        <div class="kv"><span>Wohnhaus</span><b id="totHeatHouse">–</b></div>
+        <div class="kv"><span>Gebäude 2 (Rosi)</span><b id="totHeatRosi">–</b></div>
+      </div>
+
+      <div class="card inner">
+        <h3 class="h3">Strom (kWh)</h3>
+        <div class="kv"><span>Heizung</span><b id="totElecHeating">–</b></div>
+        <div class="kv"><span>Pumpe</span><b id="totElecPump">–</b></div>
+        <div class="kv"><span>Summe</span><b id="totElecTotal">–</b></div>
+      </div>
+
+      <div class="card inner">
+        <h3 class="h3">Hackschnitzel (kg)</h3>
+        <div class="kv"><span>Gesamtverbrauch</span><b id="totChipsTotal">–</b></div>
+        <div class="kv"><span>Aktuell seit letzter Asche</span><b id="totChipsSinceAshNow">–</b></div>
+      </div>
+
+      <div class="card inner">
+        <h3 class="h3">Betrieb</h3>
+        <div class="kv"><span>Vollaststunden</span><b id="totFullLoadH">–</b></div>
+        <div class="kv"><span>Pufferladungen</span><b id="totBufferCharges">–</b></div>
+        <div class="kv"><span>Tage mit Eintrag</span><b id="totDays">–</b></div>
+      </div>
+    </div>
+  </section>
+
+<section class="tab card hidden" data-tab="vergleich">
     <h2 style="margin:0 0 8px 0; font-size:16px;">Vergleich (Jahr A vs Jahr B)</h2>
     <div class="row">
       <div>
