--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@
 
     <div class="hr"></div>
     <button class="secondary" id="btnExportJson">JSON Backup exportieren</button>
+    <button class="secondary" id="btnExportMaintCsv" style="margin-top:8px;">Wartungen CSV exportieren</button>
     <button class="secondary" id="btnExportCsv" style="margin-top:8px;">CSV Backup exportieren (Excel)</button>
   
     <div class="hr"></div>
